objects/TRWayLeadMgmt__SLA_Violation_Notification_Task_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TRWayLeadMgmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Priority__c</fullName>
        <label>Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWayLeadMgmt__Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SLA Violation Notification Task Config</label>
</CustomObject>